# vertaling

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/vertaling/: __init__.py  pipeline.py
src/vertaling/_core/: __init__.py  config.py  models.py  origins.py
src/vertaling/backends/: __init__.py  base.py  echo.py  google.py  human_review.py  libretranslate.py
src/vertaling/cli/: __init__.py  main.py
src/vertaling/collectors/: __init__.py  base.py  model_field.py  po_file.py
src/vertaling/fastapi/: __init__.py  background.py  dependencies.py  middleware.py
src/vertaling/glossaries/: __init__.py  base.py  memory.py  sqlalchemy.py
src/vertaling/glossary/: __init__.py  base.py  memory.py  sqlalchemy.py
src/vertaling/integrations/: __init__.py
src/vertaling/integrations/fastapi/: __init__.py  background.py  decorators.py  dependencies.py  routes.py
src/vertaling/integrations/sqlalchemy/: __init__.py  mixin.py
src/vertaling/store/: __init__.py  base.py  database.py  memory.py
src/vertaling/stores/: __init__.py  base.py  composite.py  json_file.py  memory.py  migrations.sql  sqlalchemy.py
src/vertaling/translators/: __init__.py  base.py  echo.py  google.py  human_review.py  libretranslate.py  pseudo.py
src/vertaling/utilities/: __init__.py  codes.py  completeness.py  interpolation.py  json_path.py  locale.py  scanner.py
src/vertaling/writers/: __init__.py  base.py  model_field.py  po_file.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_backends.py  test_codes.py  test_collectors.py  test_composite_store.py  test_fastapi.py  test_fastapi_decorators.py  test_fastapi_routes.py  test_glossary.py  test_glossary_sqlalchemy.py  test_google_translator.py  test_json_file_store.py  test_json_path.py  test_models.py  test_pipeline.py  test_scanner.py  test_sqlalchemy_store.py  test_stores.py  test_translatable_mixin.py  test_translators.py  test_utilities.py  test_writers.py
