[tool.poetry]
name = "vertaling"
version = "0.1.0"
description = "A decoupled translation pipeline with translate-on-miss."
authors = ["Kevin Buoren Shiue <kevin@vaguely.nl>"]
license = "MIT"
readme = "README.md"
keywords = ["i18n", "translation", "fastapi", "deepl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "vertaling", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.0"

# Optional extra dependencies
fastapi = { version = "^0.110", optional = true }
starlette = { version = "^0.36", optional = true }
deepl = { version = "^1.17", optional = true }
google-cloud-translate = { version = "^3.15", optional = true }
httpx = { version = "^0.27", optional = true }
typer = { version = "^0.12", optional = true }
babel = { version = "^2.14", optional = true }
sqlalchemy = { version = "^2.0", optional = true }

[tool.poetry.extras]
fastapi = ["fastapi", "starlette"]
deepl = ["deepl"]
google = ["google-cloud-translate"]
libretranslate = ["httpx"]
cli = ["typer"]
po = ["babel"]
sqlalchemy = ["sqlalchemy"]
all = ["fastapi", "starlette", "deepl", "google-cloud-translate", "httpx", "typer", "babel", "sqlalchemy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
responses = "^0.25"
vcrpy = "^6.0"
fastapi = "^0.110"
starlette = "^0.36"
deepl = "^1.17"
google-cloud-translate = "^3.15"
httpx = "^0.27"
typer = "^0.12"

[tool.poetry.scripts]
vertaling = "vertaling.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "SIM",  # flake8-simplify
]
ignore = [
    "ANN101",  # self annotation not required
    "ANN102",  # cls annotation not required
    "ANN401",  # Any allowed where necessary
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["vertaling"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "vertaling._core.*"
strict = true

[[tool.mypy.overrides]]
module = "vertaling.stores.*"
disallow_untyped_defs = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "vertaling.integrations.fastapi.*"
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "babel.*",
    "vcrpy.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=vertaling --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["vertaling"]
branch = true
omit = [
    "src/vertaling/cli/*",
    "src/vertaling/translators/libretranslate.py",
    "src/vertaling/integrations/fastapi/middleware.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "\\.\\.\\.",
    "pass",
    "raise NotImplementedError",
    "raise RuntimeError",
    "raise ImportError",
]
